--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="nav-container">
     <div class="brand">
       <a href="#!">
-      <img src="Finsurity.jpg" style="height:66px;"></a>
+      <img src="Finsurity.jpg" style="height:80px;margin-bottom: 2px"></a>
     </div>
     <nav>
       <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
@@ -126,6 +126,7 @@
         <li>
           <a href="#!"> Contact Us </a>
         </li>
+      </ul>
     </nav>
   </div>
 </section>
@@ -140,7 +141,7 @@
 </article>
 <!-- partial -->
 
-<footer class="footer-section">
+<div class="footer-section">
         <div class="container">
             <div class="footer-cta pt-5 pb-5">
                 <div class="row">
@@ -235,23 +236,23 @@
                 <div class="row">
                     <div class="col-xl-6 col-lg-6 text-center text-lg-left">
                         <div class="copyright-text">
-                            <p>Copyright &copy; 2018, All Right Reserved <a href="https://codepen.io/anupkumar92/">Anup</a></p>
+                            <p>Copyright &copy; 2020, All Right Reserved by Finsurety</p>
                         </div>
                     </div>
-                    <div class="col-xl-6 col-lg-6 d-none d-lg-block text-right">
-                        <div class="footer-menu">
-                            <ul>
-                                <li><a href="#">Home</a></li>
-                                <li><a href="#">Terms</a></li>
-                                <li><a href="#">Privacy</a></li>
-                                <li><a href="#">Policy</a></li>
-                                <li><a href="#">Contact</a></li>
-                            </ul>
-                        </div>
-                    </div>
+<!--                    <div class="col-xl-6 col-lg-6 d-none d-lg-block text-right">-->
+<!--                        <div class="footer-menu">-->
+<!--                            <ul>-->
+<!--                                <li><a href="#">Home</a></li>-->
+<!--                                <li><a href="#">Terms</a></li>-->
+<!--                                <li><a href="#">Privacy</a></li>-->
+<!--                                <li><a href="#">Policy</a></li>-->
+<!--                                <li><a href="#">Contact</a></li>-->
+<!--                            </ul>-->
+<!--                        </div>-->
+<!--                    </div>-->
                 </div>
             </div>
         </div>
-    </footer>
+    </div>
 </body>
 </html>
