Fixed main image with text Fixed dropdown menu

--- a/index.html
+++ b/index.html
@@ -130,8 +130,16 @@
     </nav>
   </div>
 </section>
-<div style="height:500px">
-<img src="consfinal.jpg" style="width:100%;height:90%">
+<div style="height: 80px"> </div>
+<div class="main-bg">
+    <div class="img-overlay">
+        <h1 class="main-text">
+        Assuring Financial Security
+        </h1>
+        <span>
+            Finsurety is a holistic tax, financial, and business advisory firm with an aim to help companies explore opportunities in India which benefit their businesses
+        </span>
+    </div>
 </div>
 
 <article>
