--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 <div style="height: 80px"> </div>
 <div class="main-bg">
     <div class="img-overlay">
-        <h1 class="main-text">
+        <h1 class="main-text-heading">
         Assuring Financial Security
         </h1>
         <span>
