--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <h1 class="main-text-heading">
         Assuring Financial Security
         </h1>
-        <span>
+        <span class="main-text-subtext">
             Finsurety is a holistic tax, financial, and business advisory firm with an aim to help companies explore opportunities in India which benefit their businesses
         </span>
     </div>
