Main text added

--- a/index.html
+++ b/index.html
@@ -141,7 +141,12 @@
         </div>
     </div>
 </div>
+<div class="body-text">
+    We are a consultancy firm comprising of financial advisors, tax consultants and chartered accountants, specializing in various aspects such as corporate tax planning, financial accounting, company incorporation, corporate finance, transfer pricing, debt syndication and audit practices.
+<br><br>
+    Finsurety was founded in 2010 by two visionary men who currently serve as our Founding Partners. They come from different portfolios of tax and financial advisory but the two of them shared a common goal while starting this company, and was to establish a firm which puts the client’s interest first and helps the client’s business grow.
 
+</div>
 <article>
   <h2>Navigation</h2>
   <p>Responsive Dropdown Navigation Bar.</p>
