Added Image,text and Button at bottom

--- a/index.html
+++ b/index.html
@@ -278,7 +278,26 @@
         </div>
     </div>
 </div>
+<div class="main-bg">
+    <div class="img-overlay">
+        <h1 class="main-text-heading">
+            How may we help you?
+        </h1>
+        <div class="main-text-subtext">
+            Please feel free to reach us. Our goal will always remain to find the right solution for you.
+        </div>
+        <button class="button butten1">Contact Us</button>
+    </div>
+</div>
+<br>
+<br>
 
+<div class="body-text">
+    <p>Insights</p>
+    Stay updated with our insights and expert opinions on significant aspects that affect the financial strategies and planning of companies as well as key policies issued by the government authorities that can impact doing businesses in India
+</div>
+
+<br><br><br><br><br>
 
 <div class="footer-section">
         <div class="container">
