Stacking of sidebar fixed

--- a/riskadvisory.html
+++ b/riskadvisory.html
@@ -147,25 +147,24 @@
 
 
 <div class="container-fluid">
-
-    <div class="row">
-        <div class="col-sm-3 body-text">
+    <div class="row flex-column-reverse flex-sm-row">
+        <div class="col-sm-3">
             <h4 style="text-align:left">Our Services</h4>
             <ul>
                 <li> <a href="#f"> Process Improvement & Risk advisory </a></li>
-            <br>
+                <br>
                 <li> <a href="#f">Auditing and Assurance</a></li>
-            <br>
+                <br>
                 <li><a href="#f">Tax and regulatory</a></li>
-            <br>
+                <br>
                 <li><a href="#f">Transfer Pricing</a></li>
-            <br>
+                <br>
                 <li><a href="#f">Company Secretarial</a></li>
-            <br>
+                <br>
                 <li><a href="#f">Corporate Finance</a></li>
-            <br>
+                <br>
                 <li><a href="#f">Financial Accounting</a></li>
-            <br>
+                <br>
                 <li><a href="#f">Transaction Advisory</a></li>
             </ul>
             <br>
@@ -173,12 +172,10 @@
 
             <div class="div2">For more information on how we can help create value for your organisation
                 <br>
-
-               Download Profile
+                Download Profile
             </div>
             <br>
             <br>
-
             <div class="div3">Interested in working with us?
                 <br>
                 <a href="#f">Explore a Career @ Finsurity</a>
@@ -189,24 +186,14 @@
             <div class="div4">
                 Need Help?
                 <br>
-               <p align="right">+911140160160</p>
+                <p align="right">+911140160160</p>
                 <p align="right"> info@coinmen.com</p>
             </div>
-
-
-
-
         </div>
-
-
-
-
-
-        <div class="col-sm-9">
+        <div class="col-sm-9 body-text">
             <h4>The Value Of A Virtual CFO & Risk Advisory In Businesses</h4>
             <br>
             <br>
-
             It is common knowledge that a person in authority and of exceptional talent does not come in at a low cost. And especially for unlisted companies or those in the SME sector who may/may not have a working capital dependency, employing a full-time CFO for their vision might become a financial burden.
             <br><br>
             Even more so, there are situations which are out of our control or agnostic to human intervention. It could be a time of global recession, a pandemic (such as the ongoing COVID-19 pandemic), a slowdown in investment across territories, and so on and so forth. It is in difficult times such as these when the financial health of a company becomes paramount to ensure it sustains the challenges posed to it.
@@ -273,7 +260,8 @@
             <h4>Reporting Partners</h4>
             <br>
             <br>
-            <div class="col-sm-4">
+            <div class="row">
+                <div class="col-sm-4">
                 <img src="https://image.shutterstock.com/image-vector/businessman-icon-260nw-561625345.jpg">
                 <br>
                 <h5>Nitish Mittal</h5>
@@ -292,8 +280,7 @@
                 <a href="#f">Follow on Linkedin</a>
                 <br>
             </div>
-
-            <div class="col-sm-4">
+                <div class="col-sm-4">
                 <img src="https://image.shutterstock.com/image-vector/businessman-icon-260nw-561625345.jpg">
                 <br>
                 <h5>Nitish Mittal</h5>
@@ -312,11 +299,8 @@
                 <a href="#f">Follow on Linkedin</a>
                 <br>
             </div>
-
-
-
-
-        </div>
+            </div>
+            </div>
 
     </div>
 </div>
