--- a/riskadvisory.html
+++ b/riskadvisory.html
@@ -190,7 +190,8 @@
                 <p align="right"> info@coinmen.com</p>
             </div>
         </div>
-        <div class="col-sm-9 body-text">
+        <div class="col-sm-9">
+            <div class="body-text">
             <h4>The Value Of A Virtual CFO & Risk Advisory In Businesses</h4>
             <br>
             <br>
@@ -298,6 +299,7 @@
                 <br>
                 <a href="#f">Follow on Linkedin</a>
                 <br>
+                </div>
             </div>
             </div>
             </div>
