Refinements for CFO page

--- a/riskadvisory.html
+++ b/riskadvisory.html
@@ -42,6 +42,26 @@
                         </li>
                         <li>
                             <a href="#!">Tax and regulatory</a>
+                            <ul class="nav-dropdown">
+                                <li>
+                                    Corporate Tax
+                                </li>
+                                <li>
+                                    International Tax
+                                </li>
+                                <li>
+                                    Compliance & Regulatory
+                                </li>
+                                <li>
+                                    Indirect Tax - GST
+                                </li>
+                                <li>
+                                    GST Audit
+                                </li>
+                                <li>
+                                    Expatriate Taxation
+                                </li>
+                            </ul>
                         </li>
                         <li>
                             <a href="#!">Transfer Pricing</a>
@@ -149,6 +169,7 @@
 <div class="container-fluid">
     <div class="row flex-column-reverse flex-sm-row">
         <div class="col-sm-3">
+            <div  style="padding: 20px 20px 20px 20px">
             <h4 style="text-align:left">Our Services</h4>
             <ul>
                 <li> <a href="#f"> Process Improvement & Risk advisory </a></li>
@@ -190,10 +211,10 @@
                 <p align="right"> info@coinmen.com</p>
             </div>
         </div>
+        </div>
         <div class="col-sm-9">
             <div class="body-text">
             <h4>The Value Of A Virtual CFO & Risk Advisory In Businesses</h4>
-            <br>
             <br>
             It is common knowledge that a person in authority and of exceptional talent does not come in at a low cost. And especially for unlisted companies or those in the SME sector who may/may not have a working capital dependency, employing a full-time CFO for their vision might become a financial burden.
             <br><br>
@@ -206,7 +227,6 @@
             When it comes to the financial and related business planning, we intend to do the heavy lifting for you, so that your pursuit of achieving your vision remains unaffected by circumstances beyond your reach.
             <br><br><br>
             <h4>Our Approach To Virtual CFO Services And Risk Advisory Services</h4>
-            <br>
             <br>
             It’s simple, to be honest.
             <br>
@@ -242,9 +262,7 @@
                 <li>Liaison with investors and collaborators</li>
                 <li>Financial restructuring (including debt/loan restructuring)</li>
             </ul>
-            <br>
             Some of the key functions of our Risk Advisory Services include
-            <br>
             <ul>
                 <li>Budgeting and forecasting</li>
                 <li>Improvement of governance standards and strategic decision-making processes</li>
