Index navbar links fixed and minor css updates

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
       <ul class="nav-list">
         <li>
-          <a href="#!">Home</a>
+          <a href="/Finsurety/index.html">Home</a>
         </li>
         <!-- <li>
           <a href="#!">Services</a>
@@ -38,22 +38,42 @@
               <a href="/Finsurety/riskadvisory.html"> Process Improvement & Risk advisory</a>
             </li>
             <li>
-              <a href="#!">Auditing and Assurance </a>
+              <a href="?Finsurety/auditing.html">Auditing and Assurance </a>
+            </li>
+              <li>
+                  <a href="#!">Tax and regulatory</a>
+                  <ul class="nav-dropdown">
+                      <li>
+                          Corporate Tax
+                      </li>
+                      <li>
+                          International Tax
+                      </li>
+                      <li>
+                          Compliance & Regulatory
+                      </li>
+                      <li>
+                          Indirect Tax - GST
+                      </li>
+                      <li>
+                          GST Audit
+                      </li>
+                      <li>
+                          Expatriate Taxation
+                      </li>
+                  </ul>
+              </li>
+            <li>
+              <a href="/Finsurety/transferpricing.html">Transfer Pricing</a>
             </li>
             <li>
-              <a href="#!">Tax and regulatory</a>
+              <a href="/Finsurety/CompanySecretarialServices.html">Company Secretarial</a>
             </li>
             <li>
-              <a href="#!">Transfer Pricing</a>
+              <a href="/Finsurety/CorporateFinanceAdvisoryAndServices.html">Corporate Finance</a>
             </li>
             <li>
-              <a href="#!">Company Secretarial</a>
-            </li>
-            <li>
-              <a href="#!">Corporate Finance</a>
-            </li>
-            <li>
-              <a href="#!">Financial Accounting</a>
+              <a href="/Finsurety/financialaccounting.html">Financial Accounting</a>
             </li>
             <li>
               <a href="#!">Transaction. Advisory</a>
