--- a/riskadvisory.html
+++ b/riskadvisory.html
@@ -18,7 +18,7 @@
 <section class="navigation">
     <div class="nav-container">
         <div class="brand">
-            <a href="#!">
+            <a href="/Finsurety/index.html">
                 <img src="Finsurity.jpg" style="height:80px;margin-bottom: 2px"></a>
         </div>
         <nav>
@@ -169,7 +169,7 @@
 <div class="container-fluid">
     <div class="row flex-column-reverse flex-sm-row">
         <div class="col-sm-3">
-            <div  style="padding: 20px 20px 20px 20px">
+            <div  style="padding: 40px 20px 20px 20px">
             <h4 style="text-align:left">Our Services</h4>
             <ul class="ul-sidenav-list">
                 <li> <a href="#f"> Process Improvement & Risk advisory </a></li>
