Fixed padding issue

--- a/AutoComponents.html
+++ b/AutoComponents.html
@@ -141,8 +141,7 @@
         </h1>
     </div>
 </div>
-<br>
-<br>
+<div class="body-text">
 Projected to become the 3rd largest in its domain globally by 2026, India’s auto-components sector is witnessing massive growth with interest from businesses from around the world.
 <br>
 <br>
@@ -160,7 +159,7 @@ The significant potential of the auto-component sector in India can be captured 
 <br>
 
 <div class="container-fluid">
-    <div class="row flex-column-reverse flex-sm-row">
+    <div class="row">
         <div class="col-sm-4">
             <h1>$51.2 billion</h1>
             <h6>NET-VALUE AS OF FY 2017-18</h6>
@@ -195,7 +194,6 @@ The significant potential of the auto-component sector in India can be captured 
             </div>
         </div>
         <div class="col-sm-10">
-            <div class="body-text">
                 <h4>About Our Team And Its Approach To Transaction Advisory</h4>
                 <br>Transaction advisory requires a meticulous approach in its planning and execution. There are various facets which are covered under the umbrella of transaction advisory such as business development consulting, capital raising, joint venture negotiations, dealing with overseas litigation authorities, mergers and acquisition propositions, and so on.
                 <br>
@@ -282,6 +280,7 @@ The significant potential of the auto-component sector in India can be captured 
         </div>
 
     </div>
+</div>
 </div>
 <br>
 <br>
