General Issues Fixed

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
               <a href="/Finsurety/financialaccounting.html">Financial Accounting</a>
             </li>
             <li>
-              <a href="#!">Transaction. Advisory</a>
+              <a href="/Finsurety/TransactionAdvisory.html">Transaction Advisory</a>
             </li>
 
           </ul>
@@ -91,19 +91,19 @@
               <a href="#!">Education</a>
             </li>
             <li>
-              <a href="#!">Healthcare</a>
+              <a href="/Finsurety/IndianHealthcare.html">Healthcare</a>
             </li>
             <li>
-              <a href="#!">Hospitality</a>
+              <a href="/Finsurety/IndianHospitality.html">Hospitality</a>
             </li>
             <li>
-              <a href="#!">Infrastucture</a>
+              <a href="/Finsurety/Infrastructure.html">Infrastucture</a>
             </li>
             <li>
               <a href="#!">IT and ITeS</a>
             </li>
             <li>
-              <a href="#!">Manufacturing</a>
+              <a href="/Finsurety/Manufacturing.html">Manufacturing</a>
             </li>
             <li>
               <a href="#!">Renewable Energy</a>
