--- a/TransactionAdvisory.html
+++ b/TransactionAdvisory.html
@@ -146,45 +146,47 @@
 <div class="container-fluid">
     <div class="row flex-column-reverse flex-sm-row">
         <div class="col-sm-3">
-            <h4 style="text-align:left">Our Services</h4>
-            <ul>
-                <li> <a href="#f"> Process Improvement & Risk advisory </a></li>
+            <div  style="padding: 40px 20px 20px 20px">
+                <h4 style="text-align:left">Our Services</h4>
+                <ul class="ul-sidenav-list">
+                    <li> <a href="#f"> Process Improvement & Risk advisory </a></li>
+                    <br>
+                    <li> <a href="#f">Auditing and Assurance</a></li>
+                    <br>
+                    <li><a href="#f">Tax and regulatory</a></li>
+                    <br>
+                    <li><a href="#f">Transfer Pricing</a></li>
+                    <br>
+                    <li><a href="#f">Company Secretarial</a></li>
+                    <br>
+                    <li><a href="#f">Corporate Finance</a></li>
+                    <br>
+                    <li><a href="#f">Financial Accounting</a></li>
+                    <br>
+                    <li><a href="#f">Transaction Advisory</a></li>
+                </ul>
                 <br>
-                <li> <a href="#f">Auditing and Assurance</a></li>
                 <br>
-                <li><a href="#f">Tax and regulatory</a></li>
-                <br>
-                <li><a href="#f">Transfer Pricing</a></li>
-                <br>
-                <li><a href="#f">Company Secretarial</a></li>
-                <br>
-                <li><a href="#f">Corporate Finance</a></li>
-                <br>
-                <li><a href="#f">Financial Accounting</a></li>
-                <br>
-                <li><a href="#f">Transaction Advisory</a></li>
-            </ul>
-            <br>
-            <br>
 
-            <div class="div2">For more information on how we can help create value for your organisation
+                <div class="div2">For more information on how we can help create value for your organisation
+                    <br>
+                    Download Profile
+                </div>
                 <br>
-                Download Profile
-            </div>
-            <br>
-            <br>
-            <div class="div3">Interested in working with us?
                 <br>
-                <a href="#f">Explore a Career @ Finsurity</a>
-            </div>
-            <br>
-            <br>
+                <div class="div3">Interested in working with us?
+                    <br>
+                    <a href="#f">Explore a Career @ Finsurity</a>
+                </div>
+                <br>
+                <br>
 
-            <div class="div4">
-                Need Help?
-                <br>
-                <p align="right">+911140160160</p>
-                <p align="right"> info@coinmen.com</p>
+                <div class="div4">
+                    Need Help?
+                    <br>
+                    <p align="right">+911140160160</p>
+                    <p align="right"> info@coinmen.com</p>
+                </div>
             </div>
         </div>
         <div class="col-sm-9">
