--- a/internationaltax.html
+++ b/internationaltax.html
@@ -146,51 +146,52 @@
 <div class="container-fluid">
     <div class="row flex-column-reverse flex-sm-row">
         <div class="col-sm-3">
-            <h4 style="text-align:left">Our Services</h4>
-            <ul>
-                <li> <a href="#f"> Process Improvement & Risk advisory </a></li>
+            <div  style="padding: 40px 20px 20px 20px">
+                <h4 style="text-align:left">Our Services</h4>
+                <ul class="ul-sidenav-list">
+                    <li> <a href="#f"> Process Improvement & Risk advisory </a></li>
+                    <br>
+                    <li> <a href="#f">Auditing and Assurance</a></li>
+                    <br>
+                    <li><a href="#f">Tax and regulatory</a></li>
+                    <br>
+                    <li><a href="#f">Transfer Pricing</a></li>
+                    <br>
+                    <li><a href="#f">Company Secretarial</a></li>
+                    <br>
+                    <li><a href="#f">Corporate Finance</a></li>
+                    <br>
+                    <li><a href="#f">Financial Accounting</a></li>
+                    <br>
+                    <li><a href="#f">Transaction Advisory</a></li>
+                </ul>
                 <br>
-                <li> <a href="#f">Auditing and Assurance</a></li>
                 <br>
-                <li><a href="#f">Tax and regulatory</a></li>
-                <br>
-                <li><a href="#f">Transfer Pricing</a></li>
-                <br>
-                <li><a href="#f">Company Secretarial</a></li>
-                <br>
-                <li><a href="#f">Corporate Finance</a></li>
-                <br>
-                <li><a href="#f">Financial Accounting</a></li>
-                <br>
-                <li><a href="#f">Transaction Advisory</a></li>
-            </ul>
-            <br>
-            <br>
 
-            <div class="div2">For more information on how we can help create value for your organisation
+                <div class="div2">For more information on how we can help create value for your organisation
+                    <br>
+                    Download Profile
+                </div>
                 <br>
-                Download Profile
-            </div>
-            <br>
-            <br>
-            <div class="div3">Interested in working with us?
                 <br>
-                <a href="#f">Explore a Career @ Finsurity</a>
-            </div>
-            <br>
-            <br>
+                <div class="div3">Interested in working with us?
+                    <br>
+                    <a href="#f">Explore a Career @ Finsurity</a>
+                </div>
+                <br>
+                <br>
 
-            <div class="div4">
-                Need Help?
-                <br>
-                <p align="right">+911140160160</p>
-                <p align="right"> info@coinmen.com</p>
+                <div class="div4">
+                    Need Help?
+                    <br>
+                    <p align="right">+911140160160</p>
+                    <p align="right"> info@coinmen.com</p>
+                </div>
             </div>
         </div>
         <div class="col-sm-9">
             <div class="body-text">
                 <h4>International Tax – Understanding Taxes Beyond Borders</h4>
-                <br>
                 <br>
                 The growth of a business across geographies comes with imminent tax implications. In this case, gaining insight into international tax mechanisms, provisions, agreements, etc. becomes extremely important. A critical angle here is to analyze the respective double taxation agreements, which exist between India and other countries and to provide solutions to businesses keeping their short-term and long-term impact in mind. Other than tax treaties, it is the aspect of transfer pricing (TP) which is essential in strategizing and analyzing tax implications for businesses with an overseas presence, especially those with parent companies outside of India. Here, the major aspect is to look at cross-border transactions and businesses holistically, and understanding supply chains, industries, revenue models, as well as concepts under GAAR (General Anti-Avoidance Rules), BEPS (Base Erosion and Profit Sharing), etc. to assist critical decision making. <br>
                 While corporate tax does apply universally, its impact can be layered and must be understood carefully on the type of business in question: domestic or foreign companies, an existing venture or a new company, etc. And secondly, it’s further imperative to understand how tax benefits apply across markets and industries – which comes with developing a tailored tax strategy.<br><br>
@@ -214,7 +215,7 @@
                 </ul>
                 <br>
                 Detailed information about our Transfer Pricing Services can be found <a href="#f">here</a>
-                <hr style="height:2px;color:gray;background-color:gray;text-align:left;width:80%;margin-left:0">
+                <hr style="height:2px;color:gray;background-color:gray;text-align:left;width:100%;margin-left:0">
                 <br>
                 <br>
                 <h4>Reporting Partners</h4>
