Major bug fixes

--- a/CompanySecretarialServices.html
+++ b/CompanySecretarialServices.html
@@ -146,53 +146,56 @@
 <div class="container-fluid">
     <div class="row flex-column-reverse flex-sm-row">
         <div class="col-sm-3">
-            <div  style="padding: 40px 20px 20px 20px">
-                <h4 style="text-align:left">Our Services</h4>
-                <ul class="ul-sidenav-list">
-                    <li> <a href="#f"> Process Improvement & Risk advisory </a></li>
-                    <br>
-                    <li> <a href="#f">Auditing and Assurance</a></li>
-                    <br>
-                    <li><a href="#f">Tax and regulatory</a></li>
-                    <br>
-                    <li><a href="#f">Transfer Pricing</a></li>
-                    <br>
-                    <li><a href="#f">Company Secretarial</a></li>
-                    <br>
-                    <li><a href="#f">Corporate Finance</a></li>
-                    <br>
-                    <li><a href="#f">Financial Accounting</a></li>
-                    <br>
-                    <li><a href="#f">Transaction Advisory</a></li>
-                </ul>
-                <br>
-                <br>
+            <div class="sidebar-item">
+                <div class="make-me-sticky">
+                    <div>
+                        <h4 style="text-align:left">Our Services</h4>
+                        <ul class="ul-sidenav-list" type="none">
+                            <li> <a href="#f"> Process Improvement & Risk advisory </a></li>
+                            <br>
+                            <li> <a href="#f">Auditing and Assurance</a></li>
+                            <br>
+                            <li><a href="#f">Tax and regulatory</a></li>
+                            <br>
+                            <li><a href="#f">Transfer Pricing</a></li>
+                            <br>
+                            <li><a href="#f">Company Secretarial</a></li>
+                            <br>
+                            <li><a href="#f">Corporate Finance</a></li>
+                            <br>
+                            <li><a href="#f">Financial Accounting</a></li>
+                            <br>
+                            <li><a href="#f">Transaction Advisory</a></li>
+                        </ul>
+                        <br>
+                        <br>
 
-                <div class="div2">For more information on how we can help create value for your organisation
-                    <br>
-                    Download Profile
-                </div>
-                <br>
-                <br>
-                <div class="div3">Interested in working with us?
-                    <br>
-                    <a href="#f">Explore a Career @ Finsurity</a>
-                </div>
-                <br>
-                <br>
+                        <div class="div2">For more information on how we can help create value for your organisation
+                            <br>
+                            Download Profile
+                        </div>
+                        <br>
+                        <br>
+                        <div class="div3">Interested in working with us?
+                            <br>
+                            <a href="#f">Explore a Career @ Finsurity</a>
+                        </div>
+                        <br>
+                        <br>
 
-                <div class="div4">
-                    Need Help?
-                    <br>
-                    <p align="right">+911140160160</p>
-                    <p align="right"> info@coinmen.com</p>
+                        <div class="div4">
+                            Need Help?
+                            <br>
+                            <p align="right">+911140160160</p>
+                            <p align="right"> info@coinmen.com</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
         <div class="col-sm-9">
             <div class="body-text">
                 <h4>Why Company Secretarial Services Require Emphasis</h4>
-                <br>
                 <br>
                 The setup of a company’s presence in India starts with its incorporation which involves everything ranging from strategy, execution, and compliance. This three-fold approach allows us to holistically undertake our company secretarial services with an off-the-textbook method to help foreign entrants in India develop a flexible yet robust business methodology, which carries room for scalability in the future.
                 <br>
@@ -228,7 +231,7 @@
                 Aside from the entire scope of services needed in the incorporation of a new business in India, some of the important functions undertaken by our Company Secretarial Services team include:
                 <br>
                 <br>
-                <ul>
+                <ul style="padding-left: 20px;">
                     <li>Transfer of registered address, including state-to-state transfers</li>
                     <li>Advisory on SEBI and FEMA-related matters as well as other legal or financial matters of similar nature</li><li>Advisory on Company Law regulations and their impact on the client’s business entity in India
                     <li>Compliance and advisory related to start-up funding</li>
@@ -246,10 +249,10 @@
                 For information answering the frequently asked questions related to Corporate Secretarial Services, <a href="#f">click here</a>
                 <br>
                 <br>
-                <hr style="height:2px;color:gray;background-color:gray;text-align:left;width:80%;margin-left:0">
+                <hr style="height:2px;color:gray;background-color:gray;text-align:left;width:100%;margin-left:0">
                 <h4>Documents For Corporate Secretarial Compliances</h4>
 
-                <hr style="height:2px;color:gray;background-color:gray;text-align:left;width:80%;margin-left:0">
+                <hr style="height:2px;color:gray;background-color:gray;text-align:left;width:100%;margin-left:0">
 
                 <br>
                 <br>
