--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
       <ul class="nav-list">
         <li>
-          <a href="/Finsurety/index.html">Home</a>
+          <a href="index.html">Home</a>
         </li>
         <!-- <li>
           <a href="#!">Services</a>
@@ -35,10 +35,10 @@
           <a href="#!">Services</a>
           <ul class="nav-dropdown">
             <li>
-              <a href="/Finsurety/riskadvisory.html"> Process Improvement & Risk advisory</a>
+              <a href="riskadvisory.html"> Process Improvement & Risk advisory</a>
             </li>
             <li>
-              <a href="?Finsurety/auditing.html">Auditing and Assurance </a>
+              <a href="auditing.html">Auditing and Assurance </a>
             </li>
               <li>
                   <a href="#!">Tax and regulatory</a>
@@ -64,19 +64,19 @@
                   </ul>
               </li>
             <li>
-              <a href="/Finsurety/transferpricing.html">Transfer Pricing</a>
+              <a href="transferpricing.html">Transfer Pricing</a>
             </li>
             <li>
-              <a href="/Finsurety/CompanySecretarialServices.html">Company Secretarial</a>
+              <a href="CompanySecretarialServices.html">Company Secretarial</a>
             </li>
             <li>
-              <a href="/Finsurety/CorporateFinanceAdvisoryAndServices.html">Corporate Finance</a>
+              <a href="CorporateFinanceAdvisoryAndServices.html">Corporate Finance</a>
             </li>
             <li>
-              <a href="/Finsurety/financialaccounting.html">Financial Accounting</a>
+              <a href="financialaccounting.html">Financial Accounting</a>
             </li>
             <li>
-              <a href="/Finsurety/TransactionAdvisory.html">Transaction Advisory</a>
+              <a href="TransactionAdvisory.html">Transaction Advisory</a>
             </li>
 
           </ul>
@@ -91,19 +91,19 @@
               <a href="#!">Education</a>
             </li>
             <li>
-              <a href="/Finsurety/IndianHealthcare.html">Healthcare</a>
+              <a href="IndianHealthcare.html">Healthcare</a>
             </li>
             <li>
-              <a href="/Finsurety/IndianHospitality.html">Hospitality</a>
+              <a href="IndianHospitality.html">Hospitality</a>
             </li>
             <li>
-              <a href="/Finsurety/Infrastructure.html">Infrastucture</a>
+              <a href="infrastructure.html">Infrastucture</a>
             </li>
             <li>
               <a href="#!">IT and ITeS</a>
             </li>
             <li>
-              <a href="/Finsurety/Manufacturing.html">Manufacturing</a>
+              <a href="Manufacturing.html">Manufacturing</a>
             </li>
             <li>
               <a href="#!">Renewable Energy</a>
