--- a/TransactionAdvisory.html
+++ b/TransactionAdvisory.html
@@ -25,7 +25,7 @@
             <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
             <ul class="nav-list">
                 <li>
-                    <a href="#!">Home</a>
+                    <a href="index.html">Home</a>
                 </li>
                 <!-- <li>
                   <a href="#!">Services</a>
@@ -35,28 +35,48 @@
                     <a href="#!">Services</a>
                     <ul class="nav-dropdown">
                         <li>
-                            <a href="#!"> Process Improvement & Risk advisory</a>
+                            <a href="riskadvisory.html"> Process Improvement & Risk advisory</a>
                         </li>
                         <li>
-                            <a href="#!">Auditing and Assurance </a>
+                            <a href="auditing.html">Auditing and Assurance </a>
                         </li>
                         <li>
                             <a href="#!">Tax and regulatory</a>
+                            <ul class="nav-dropdown">
+                                <li>
+                                    Corporate Tax
+                                </li>
+                                <li>
+                                    International Tax
+                                </li>
+                                <li>
+                                    Compliance & Regulatory
+                                </li>
+                                <li>
+                                    Indirect Tax - GST
+                                </li>
+                                <li>
+                                    GST Audit
+                                </li>
+                                <li>
+                                    Expatriate Taxation
+                                </li>
+                            </ul>
                         </li>
                         <li>
-                            <a href="#!">Transfer Pricing</a>
+                            <a href="transferpricing.html">Transfer Pricing</a>
                         </li>
                         <li>
-                            <a href="#!">Company Secretarial</a>
+                            <a href="CompanySecretarialServices.html">Company Secretarial</a>
                         </li>
                         <li>
-                            <a href="#!">Corporate Finance</a>
+                            <a href="CorporateFinanceAdvisoryAndServices.html">Corporate Finance</a>
                         </li>
                         <li>
-                            <a href="#!">Financial Accounting</a>
+                            <a href="financialaccounting.html">Financial Accounting</a>
                         </li>
                         <li>
-                            <a href="#!">Transaction. Advisory</a>
+                            <a href="TransactionAdvisory.html">Transaction Advisory</a>
                         </li>
 
                     </ul>
@@ -71,19 +91,19 @@
                             <a href="#!">Education</a>
                         </li>
                         <li>
-                            <a href="#!">Healthcare</a>
+                            <a href="IndianHealthcare.html">Healthcare</a>
                         </li>
                         <li>
-                            <a href="#!">Hospitality</a>
+                            <a href="IndianHospitality.html">Hospitality</a>
                         </li>
                         <li>
-                            <a href="#!">Infrastucture</a>
+                            <a href="infrastructure.html">Infrastucture</a>
                         </li>
                         <li>
                             <a href="#!">IT and ITeS</a>
                         </li>
                         <li>
-                            <a href="#!">Manufacturing</a>
+                            <a href="Manufacturing.html">Manufacturing</a>
                         </li>
                         <li>
                             <a href="#!">Renewable Energy</a>
@@ -146,46 +166,50 @@
 <div class="container-fluid">
     <div class="row flex-column-reverse flex-sm-row">
         <div class="col-sm-3">
-            <div  style="padding: 40px 20px 20px 20px">
-                <h4 style="text-align:left">Our Services</h4>
-                <ul class="ul-sidenav-list">
-                    <li> <a href="#f"> Process Improvement & Risk advisory </a></li>
-                    <br>
-                    <li> <a href="#f">Auditing and Assurance</a></li>
-                    <br>
-                    <li><a href="#f">Tax and regulatory</a></li>
-                    <br>
-                    <li><a href="#f">Transfer Pricing</a></li>
-                    <br>
-                    <li><a href="#f">Company Secretarial</a></li>
-                    <br>
-                    <li><a href="#f">Corporate Finance</a></li>
-                    <br>
-                    <li><a href="#f">Financial Accounting</a></li>
-                    <br>
-                    <li><a href="#f">Transaction Advisory</a></li>
-                </ul>
-                <br>
-                <br>
+            <div class="sidebar-item">
+                <div class="make-me-sticky">
+                    <div>
+                        <h4 style="text-align:left">Our Services</h4>
+                        <ul class="ul-sidenav-list" type="none">
+                            <li> <a href="#f"> Process Improvement & Risk advisory </a></li>
+                            <br>
+                            <li> <a href="#f">Auditing and Assurance</a></li>
+                            <br>
+                            <li><a href="#f">Tax and regulatory</a></li>
+                            <br>
+                            <li><a href="#f">Transfer Pricing</a></li>
+                            <br>
+                            <li><a href="#f">Company Secretarial</a></li>
+                            <br>
+                            <li><a href="#f">Corporate Finance</a></li>
+                            <br>
+                            <li><a href="#f">Financial Accounting</a></li>
+                            <br>
+                            <li><a href="#f">Transaction Advisory</a></li>
+                        </ul>
+                        <br>
+                        <br>
 
-                <div class="div2">For more information on how we can help create value for your organisation
-                    <br>
-                    Download Profile
-                </div>
-                <br>
-                <br>
-                <div class="div3">Interested in working with us?
-                    <br>
-                    <a href="#f">Explore a Career @ Finsurity</a>
-                </div>
-                <br>
-                <br>
+                        <div class="div2">For more information on how we can help create value for your organisation
+                            <br>
+                            Download Profile
+                        </div>
+                        <br>
+                        <br>
+                        <div class="div3">Interested in working with us?
+                            <br>
+                            <a href="#f">Explore a Career @ Finsurity</a>
+                        </div>
+                        <br>
+                        <br>
 
-                <div class="div4">
-                    Need Help?
-                    <br>
-                    <p align="right">+911140160160</p>
-                    <p align="right"> info@coinmen.com</p>
+                        <div class="div4">
+                            Need Help?
+                            <br>
+                            <p align="right">+911140160160</p>
+                            <p align="right"> info@coinmen.com</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -227,7 +251,7 @@
                 <br>
                 All our Transaction Advisory work is undertaken by our sister-concern <a href="#f">Coinmen Capital Advisors LLP</a>
                 <br>
-                <hr style="height:2px;color:gray;background-color:gray;text-align:left;width:80%;margin-left:0">
+                <hr style="height:2px;color:gray;background-color:gray;text-align:left;width:100%;margin-left:0">
                 <br>
                 <br>
                 <h4>Reporting Partners</h4>
