--- a/auditing.html
+++ b/auditing.html
@@ -25,7 +25,7 @@
             <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
             <ul class="nav-list">
                 <li>
-                    <a href="#!">Home</a>
+                    <a href="index.html">Home</a>
                 </li>
                 <!-- <li>
                   <a href="#!">Services</a>
@@ -35,28 +35,48 @@
                     <a href="#!">Services</a>
                     <ul class="nav-dropdown">
                         <li>
-                            <a href="#!"> Process Improvement & Risk advisory</a>
+                            <a href="riskadvisory.html"> Process Improvement & Risk advisory</a>
                         </li>
                         <li>
-                            <a href="#!">Auditing and Assurance </a>
+                            <a href="auditing.html">Auditing and Assurance </a>
                         </li>
                         <li>
                             <a href="#!">Tax and regulatory</a>
+                            <ul class="nav-dropdown">
+                                <li>
+                                    Corporate Tax
+                                </li>
+                                <li>
+                                    International Tax
+                                </li>
+                                <li>
+                                    Compliance & Regulatory
+                                </li>
+                                <li>
+                                    Indirect Tax - GST
+                                </li>
+                                <li>
+                                    GST Audit
+                                </li>
+                                <li>
+                                    Expatriate Taxation
+                                </li>
+                            </ul>
                         </li>
                         <li>
-                            <a href="#!">Transfer Pricing</a>
+                            <a href="transferpricing.html">Transfer Pricing</a>
                         </li>
                         <li>
-                            <a href="#!">Company Secretarial</a>
+                            <a href="CompanySecretarialServices.html">Company Secretarial</a>
                         </li>
                         <li>
-                            <a href="#!">Corporate Finance</a>
+                            <a href="CorporateFinanceAdvisoryAndServices.html">Corporate Finance</a>
                         </li>
                         <li>
-                            <a href="#!">Financial Accounting</a>
+                            <a href="financialaccounting.html">Financial Accounting</a>
                         </li>
                         <li>
-                            <a href="#!">Transaction. Advisory</a>
+                            <a href="TransactionAdvisory.html">Transaction Advisory</a>
                         </li>
 
                     </ul>
@@ -71,19 +91,19 @@
                             <a href="#!">Education</a>
                         </li>
                         <li>
-                            <a href="#!">Healthcare</a>
+                            <a href="IndianHealthcare.html">Healthcare</a>
                         </li>
                         <li>
-                            <a href="#!">Hospitality</a>
+                            <a href="IndianHospitality.html">Hospitality</a>
                         </li>
                         <li>
-                            <a href="#!">Infrastucture</a>
+                            <a href="infrastructure.html">Infrastucture</a>
                         </li>
                         <li>
                             <a href="#!">IT and ITeS</a>
                         </li>
                         <li>
-                            <a href="#!">Manufacturing</a>
+                            <a href="Manufacturing.html">Manufacturing</a>
                         </li>
                         <li>
                             <a href="#!">Renewable Energy</a>
@@ -149,60 +169,59 @@
 <div class="container-fluid">
     <div class="row flex-column-reverse flex-sm-row">
         <div class="col-sm-3">
-            <div  style="padding: 40px 20px 20px 20px">
-                <h4 style="text-align:left">Our Services</h4>
-                <ul class="ul-sidenav-list">
-                    <li> <a href="#f"> Process Improvement & Risk advisory </a></li>
-                    <br>
-                    <li> <a href="#f">Auditing and Assurance</a></li>
-                    <br>
-                    <li><a href="#f">Tax and regulatory</a></li>
-                    <br>
-                    <li><a href="#f">Transfer Pricing</a></li>
-                    <br>
-                    <li><a href="#f">Company Secretarial</a></li>
-                    <br>
-                    <li><a href="#f">Corporate Finance</a></li>
-                    <br>
-                    <li><a href="#f">Financial Accounting</a></li>
-                    <br>
-                    <li><a href="#f">Transaction Advisory</a></li>
-                </ul>
-                <br>
-                <br>
+            <div class="sidebar-item ">
+                <div class="make-me-sticky">
+                    <div  style="padding: 40px 20px 20px 40px">
+                        <h4 style="text-align:left">Our Services</h4>
+                        <ul class="ul-sidenav-list" type="none">
+                            <li> <a href="#f"> Process Improvement & Risk advisory </a></li>
+                            <br>
+                            <li> <a href="#f">Auditing and Assurance</a></li>
+                            <br>
+                            <li><a href="#f">Tax and regulatory</a></li>
+                            <br>
+                            <li><a href="#f">Transfer Pricing</a></li>
+                            <br>
+                            <li><a href="#f">Company Secretarial</a></li>
+                            <br>
+                            <li><a href="#f">Corporate Finance</a></li>
+                            <br>
+                            <li><a href="#f">Financial Accounting</a></li>
+                            <br>
+                            <li><a href="#f">Transaction Advisory</a></li>
+                        </ul>
+                        <br>
+                        <br>
 
-                <div class="div2">For more information on how we can help create value for your organisation
-                    <br>
-                    Download Profile
-                </div>
-                <br>
-                <br>
-                <div class="div3">Interested in working with us?
-                    <br>
-                    <a href="#f">Explore a Career @ Finsurity</a>
-                </div>
-                <br>
-                <br>
+                        <div class="div2">For more information on how we can help create value for your organisation
+                            <br>
+                            Download Profile
+                        </div>
+                        <br>
+                        <br>
+                        <div class="div3">Interested in working with us?
+                            <br>
+                            <a href="#f">Explore a Career @ Finsurity</a>
+                        </div>
+                        <br>
+                        <br>
 
-                <div class="div4">
-                    Need Help?
-                    <br>
-                    <p align="right">+911140160160</p>
-                    <p align="right"> info@coinmen.com</p>
+                        <div class="div4">
+                            Need Help?
+                            <br>
+                            <p align="right">+911140160160</p>
+                            <p align="right"> info@coinmen.com</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
         <div class="col-sm-9">
             <div class="body-text">
                 <h4>Our Unique Approach To Audit And Assurance Services</h4>
-                <br>
-                <br>
                 In a time when audit practices are essentially undertaken as an obligatory compliance mechanism or simply a number crunching practice by various firms, we at Coinmen take the liberty of using our auditing and assurance services to evaluate existing financial procedures of a business and gain extensive insight to help our clients. This allows us to holistically understand a business’s functionality and operations, thereby allowing us to develop better financial reports/analysis, maintain more accurate records, and bridge gaps faster so that fiscal planning procedures become more efficient over time.<br><br>
-                <br><br>
-                 <br>
+                <br>
                 <h4>Our Experience In Assurance Services</h4>
-                <br>
-                <br>
                 In our experience in terms of audit services, we’ve undertaken various assignments where we’ve helped clients across an extensive range of sectors. Instead of focusing only on quintessential audit procedures, we go a step ahead in monitoring how our financial analysis can help clients in scaling their business growth. Practically, this is something which not many firms will take the risk of doing as it is often viewed as a best practice to play it safe. And contrary to this, our methods flow with our ideology of pro-active involvement in a business via our audit practices rather than simply treating it as a post-mortem exercise. With a team comprising of qualified audit professionals and assurance experts backed by financial advisors and accountants, our audit practice aims to provide holistic business insight in every project it undertakes.
 
                 <br>
@@ -210,15 +229,13 @@
 
 
                 <h4>Our Team And Scope Of Work</h4>
-                <br>
                 Our work in audit and assurance services isn’t restricted to a single aspect. We assist our clients in undertaking financial, legal and accounting reviews of business processes which include mergers and acquisitions, partnerships and internal proceedings of the company’s routine to improve and maintain efficiency. Our experienced team of financial consultants and audit professionals are ingrained with maintaining the highest regard for accounting standards, which always follow a thorough review cycle with active involvement of our partners, as well.
                 <br>
                 <br>
                 <h4>Our List Of Audit And Assurance Services – At A Glance</h4>
-                <br>
                 Our audit and assurance services include the following functions undertaken by our team:
                 <br>
-                <ul>
+                <ul style="padding-left:20px;">
                     <li>Statutory bookkeeping</li>
                     <li>Consolidated financial reporting on a continuous basis</li>
                     <li>Monthly and quarterly assistance in preparing output accounting reports</li>
@@ -245,12 +262,9 @@
                 These services and their timely planning, execution, feedback and/or review is something that we maintain on a consistent basis by ensuring constant communication across any and every channel possible with our clients for utmost transparency and therefore, leaving no margin for error
                 <br>
                 <br>
-                <hr style="height:2px;color:gray;background-color:gray;text-align:left;width:80%;margin-left:0">
-                <br>
+                <hr style="height:2px;color:gray;background-color:gray;text-align:left;width:100%;margin-left:0">
                 <br>
                 <h4>Reporting Partners</h4>
-                <br>
-                <br>
                 <div class="row">
                     <div class="col-sm-4">
                         <img src="https://image.shutterstock.com/image-vector/businessman-icon-260nw-561625345.jpg">
