--- a/internationaltax.html
+++ b/internationaltax.html
@@ -25,7 +25,7 @@
             <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
             <ul class="nav-list">
                 <li>
-                    <a href="#!">Home</a>
+                    <a href="index.html">Home</a>
                 </li>
                 <!-- <li>
                   <a href="#!">Services</a>
@@ -35,28 +35,48 @@
                     <a href="#!">Services</a>
                     <ul class="nav-dropdown">
                         <li>
-                            <a href="#!"> Process Improvement & Risk advisory</a>
+                            <a href="riskadvisory.html"> Process Improvement & Risk advisory</a>
                         </li>
                         <li>
-                            <a href="#!">Auditing and Assurance </a>
+                            <a href="auditing.html">Auditing and Assurance </a>
                         </li>
                         <li>
                             <a href="#!">Tax and regulatory</a>
+                            <ul class="nav-dropdown">
+                                <li>
+                                    Corporate Tax
+                                </li>
+                                <li>
+                                    International Tax
+                                </li>
+                                <li>
+                                    Compliance & Regulatory
+                                </li>
+                                <li>
+                                    Indirect Tax - GST
+                                </li>
+                                <li>
+                                    GST Audit
+                                </li>
+                                <li>
+                                    Expatriate Taxation
+                                </li>
+                            </ul>
                         </li>
                         <li>
-                            <a href="#!">Transfer Pricing</a>
+                            <a href="transferpricing.html">Transfer Pricing</a>
                         </li>
                         <li>
-                            <a href="#!">Company Secretarial</a>
+                            <a href="CompanySecretarialServices.html">Company Secretarial</a>
                         </li>
                         <li>
-                            <a href="#!">Corporate Finance</a>
+                            <a href="CorporateFinanceAdvisoryAndServices.html">Corporate Finance</a>
                         </li>
                         <li>
-                            <a href="#!">Financial Accounting</a>
+                            <a href="financialaccounting.html">Financial Accounting</a>
                         </li>
                         <li>
-                            <a href="#!">Transaction. Advisory</a>
+                            <a href="TransactionAdvisory.html">Transaction Advisory</a>
                         </li>
 
                     </ul>
@@ -71,19 +91,19 @@
                             <a href="#!">Education</a>
                         </li>
                         <li>
-                            <a href="#!">Healthcare</a>
+                            <a href="IndianHealthcare.html">Healthcare</a>
                         </li>
                         <li>
-                            <a href="#!">Hospitality</a>
+                            <a href="IndianHospitality.html">Hospitality</a>
                         </li>
                         <li>
-                            <a href="#!">Infrastucture</a>
+                            <a href="infrastructure.html">Infrastucture</a>
                         </li>
                         <li>
                             <a href="#!">IT and ITeS</a>
                         </li>
                         <li>
-                            <a href="#!">Manufacturing</a>
+                            <a href="Manufacturing.html">Manufacturing</a>
                         </li>
                         <li>
                             <a href="#!">Renewable Energy</a>
@@ -146,46 +166,50 @@
 <div class="container-fluid">
     <div class="row flex-column-reverse flex-sm-row">
         <div class="col-sm-3">
-            <div  style="padding: 40px 20px 20px 20px">
-                <h4 style="text-align:left">Our Services</h4>
-                <ul class="ul-sidenav-list">
-                    <li> <a href="#f"> Process Improvement & Risk advisory </a></li>
-                    <br>
-                    <li> <a href="#f">Auditing and Assurance</a></li>
-                    <br>
-                    <li><a href="#f">Tax and regulatory</a></li>
-                    <br>
-                    <li><a href="#f">Transfer Pricing</a></li>
-                    <br>
-                    <li><a href="#f">Company Secretarial</a></li>
-                    <br>
-                    <li><a href="#f">Corporate Finance</a></li>
-                    <br>
-                    <li><a href="#f">Financial Accounting</a></li>
-                    <br>
-                    <li><a href="#f">Transaction Advisory</a></li>
-                </ul>
-                <br>
-                <br>
+            <div class="sidebar-item">
+                <div class="make-me-sticky">
+                    <div>
+                        <h4 style="text-align:left">Our Services</h4>
+                        <ul class="ul-sidenav-list" type="none">
+                            <li> <a href="#f"> Process Improvement & Risk advisory </a></li>
+                            <br>
+                            <li> <a href="#f">Auditing and Assurance</a></li>
+                            <br>
+                            <li><a href="#f">Tax and regulatory</a></li>
+                            <br>
+                            <li><a href="#f">Transfer Pricing</a></li>
+                            <br>
+                            <li><a href="#f">Company Secretarial</a></li>
+                            <br>
+                            <li><a href="#f">Corporate Finance</a></li>
+                            <br>
+                            <li><a href="#f">Financial Accounting</a></li>
+                            <br>
+                            <li><a href="#f">Transaction Advisory</a></li>
+                        </ul>
+                        <br>
+                        <br>
 
-                <div class="div2">For more information on how we can help create value for your organisation
-                    <br>
-                    Download Profile
-                </div>
-                <br>
-                <br>
-                <div class="div3">Interested in working with us?
-                    <br>
-                    <a href="#f">Explore a Career @ Finsurity</a>
-                </div>
-                <br>
-                <br>
+                        <div class="div2">For more information on how we can help create value for your organisation
+                            <br>
+                            Download Profile
+                        </div>
+                        <br>
+                        <br>
+                        <div class="div3">Interested in working with us?
+                            <br>
+                            <a href="#f">Explore a Career @ Finsurity</a>
+                        </div>
+                        <br>
+                        <br>
 
-                <div class="div4">
-                    Need Help?
-                    <br>
-                    <p align="right">+911140160160</p>
-                    <p align="right"> info@coinmen.com</p>
+                        <div class="div4">
+                            Need Help?
+                            <br>
+                            <p align="right">+911140160160</p>
+                            <p align="right"> info@coinmen.com</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -201,7 +225,7 @@
                 In order to assist you with the international tax planning and its required compliance, Coinmen offers the following services to businesses across sectors:
                 <br>
                 <br>
-                <ul>
+                <ul style="padding-left: 20px;">
                     <li>International tax advisory on complex tax issues, including withholding taxes and equalization levy</li>
                     <li>Analysis and advisory with respect to permanent establishments of foreign companies/entities in India</li>
                     <li>International tax services and advisory on aspects related to GAAR (General Anti-Avoidance Rules), DTAA (Double Taxation Avoidance Agreements) and BEPS (Base Erosion and Profit Sharing)</li>
