--- a/it&ites.html
+++ b/it&ites.html
@@ -25,7 +25,7 @@
             <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
             <ul class="nav-list">
                 <li>
-                    <a href="#!">Home</a>
+                    <a href="index.html">Home</a>
                 </li>
                 <!-- <li>
                   <a href="#!">Services</a>
@@ -35,28 +35,48 @@
                     <a href="#!">Services</a>
                     <ul class="nav-dropdown">
                         <li>
-                            <a href="#!"> Process Improvement & Risk advisory</a>
+                            <a href="riskadvisory.html"> Process Improvement & Risk advisory</a>
                         </li>
                         <li>
-                            <a href="#!">Auditing and Assurance </a>
+                            <a href="auditing.html">Auditing and Assurance </a>
                         </li>
                         <li>
                             <a href="#!">Tax and regulatory</a>
+                            <ul class="nav-dropdown">
+                                <li>
+                                    Corporate Tax
+                                </li>
+                                <li>
+                                    International Tax
+                                </li>
+                                <li>
+                                    Compliance & Regulatory
+                                </li>
+                                <li>
+                                    Indirect Tax - GST
+                                </li>
+                                <li>
+                                    GST Audit
+                                </li>
+                                <li>
+                                    Expatriate Taxation
+                                </li>
+                            </ul>
                         </li>
                         <li>
-                            <a href="#!">Transfer Pricing</a>
+                            <a href="transferpricing.html">Transfer Pricing</a>
                         </li>
                         <li>
-                            <a href="#!">Company Secretarial</a>
+                            <a href="CompanySecretarialServices.html">Company Secretarial</a>
                         </li>
                         <li>
-                            <a href="#!">Corporate Finance</a>
+                            <a href="CorporateFinanceAdvisoryAndServices.html">Corporate Finance</a>
                         </li>
                         <li>
-                            <a href="#!">Financial Accounting</a>
+                            <a href="financialaccounting.html">Financial Accounting</a>
                         </li>
                         <li>
-                            <a href="#!">Transaction. Advisory</a>
+                            <a href="TransactionAdvisory.html">Transaction Advisory</a>
                         </li>
 
                     </ul>
@@ -71,19 +91,19 @@
                             <a href="#!">Education</a>
                         </li>
                         <li>
-                            <a href="#!">Healthcare</a>
+                            <a href="IndianHealthcare.html">Healthcare</a>
                         </li>
                         <li>
-                            <a href="#!">Hospitality</a>
+                            <a href="IndianHospitality.html">Hospitality</a>
                         </li>
                         <li>
-                            <a href="#!">Infrastucture</a>
+                            <a href="infrastructure.html">Infrastucture</a>
                         </li>
                         <li>
                             <a href="#!">IT and ITeS</a>
                         </li>
                         <li>
-                            <a href="#!">Manufacturing</a>
+                            <a href="Manufacturing.html">Manufacturing</a>
                         </li>
                         <li>
                             <a href="#!">Renewable Energy</a>
@@ -132,7 +152,6 @@
         </nav>
     </div>
 </section>
-
 <div style="height: 80px"> </div>
 <div class="main-bg">
     <div class="img-overlay">
