--- a/riskadvisory.html
+++ b/riskadvisory.html
@@ -18,14 +18,14 @@
 <section class="navigation">
     <div class="nav-container">
         <div class="brand">
-            <a href="/Finsurety/index.html">
+            <a href="#!">
                 <img src="Finsurity.jpg" style="height:80px;margin-bottom: 2px"></a>
         </div>
         <nav>
             <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
             <ul class="nav-list">
                 <li>
-                    <a href="#!">Home</a>
+                    <a href="index.html">Home</a>
                 </li>
                 <!-- <li>
                   <a href="#!">Services</a>
@@ -35,10 +35,10 @@
                     <a href="#!">Services</a>
                     <ul class="nav-dropdown">
                         <li>
-                            <a href="#!"> Process Improvement & Risk advisory</a>
+                            <a href="riskadvisory.html"> Process Improvement & Risk advisory</a>
                         </li>
                         <li>
-                            <a href="#!">Auditing and Assurance </a>
+                            <a href="auditing.html">Auditing and Assurance </a>
                         </li>
                         <li>
                             <a href="#!">Tax and regulatory</a>
@@ -64,19 +64,19 @@
                             </ul>
                         </li>
                         <li>
-                            <a href="#!">Transfer Pricing</a>
+                            <a href="transferpricing.html">Transfer Pricing</a>
                         </li>
                         <li>
-                            <a href="#!">Company Secretarial</a>
+                            <a href="CompanySecretarialServices.html">Company Secretarial</a>
                         </li>
                         <li>
-                            <a href="#!">Corporate Finance</a>
+                            <a href="CorporateFinanceAdvisoryAndServices.html">Corporate Finance</a>
                         </li>
                         <li>
-                            <a href="#!">Financial Accounting</a>
+                            <a href="financialaccounting.html">Financial Accounting</a>
                         </li>
                         <li>
-                            <a href="#!">Transaction. Advisory</a>
+                            <a href="TransactionAdvisory.html">Transaction Advisory</a>
                         </li>
 
                     </ul>
@@ -91,19 +91,19 @@
                             <a href="#!">Education</a>
                         </li>
                         <li>
-                            <a href="#!">Healthcare</a>
+                            <a href="IndianHealthcare.html">Healthcare</a>
                         </li>
                         <li>
-                            <a href="#!">Hospitality</a>
+                            <a href="IndianHospitality.html">Hospitality</a>
                         </li>
                         <li>
-                            <a href="#!">Infrastucture</a>
+                            <a href="infrastructure.html">Infrastucture</a>
                         </li>
                         <li>
                             <a href="#!">IT and ITeS</a>
                         </li>
                         <li>
-                            <a href="#!">Manufacturing</a>
+                            <a href="Manufacturing.html">Manufacturing</a>
                         </li>
                         <li>
                             <a href="#!">Renewable Energy</a>
@@ -169,9 +169,11 @@
 <div class="container-fluid">
     <div class="row flex-column-reverse flex-sm-row">
         <div class="col-sm-3">
-            <div  style="padding: 40px 20px 20px 20px">
+            <div class="sidebar-item">
+                <div class="make-me-sticky">
+            <div>
             <h4 style="text-align:left">Our Services</h4>
-            <ul class="ul-sidenav-list">
+            <ul class="ul-sidenav-list" type="none">
                 <li> <a href="#f"> Process Improvement & Risk advisory </a></li>
                 <br>
                 <li> <a href="#f">Auditing and Assurance</a></li>
@@ -210,12 +212,13 @@
                 <p align="right">+911140160160</p>
                 <p align="right"> info@coinmen.com</p>
             </div>
+            </div>
+                </div>
         </div>
         </div>
         <div class="col-sm-9">
             <div class="body-text">
             <h4>The Value Of A Virtual CFO & Risk Advisory In Businesses</h4>
-            <br>
             It is common knowledge that a person in authority and of exceptional talent does not come in at a low cost. And especially for unlisted companies or those in the SME sector who may/may not have a working capital dependency, employing a full-time CFO for their vision might become a financial burden.
             <br><br>
             Even more so, there are situations which are out of our control or agnostic to human intervention. It could be a time of global recession, a pandemic (such as the ongoing COVID-19 pandemic), a slowdown in investment across territories, and so on and so forth. It is in difficult times such as these when the financial health of a company becomes paramount to ensure it sustains the challenges posed to it.
@@ -227,11 +230,9 @@
             When it comes to the financial and related business planning, we intend to do the heavy lifting for you, so that your pursuit of achieving your vision remains unaffected by circumstances beyond your reach.
             <br><br><br>
             <h4>Our Approach To Virtual CFO Services And Risk Advisory Services</h4>
-            <br>
             It’s simple, to be honest.
             <br>
             Our three-pronged approach for virtual CFO services works holistically, by looking at the following parameters:
-            <br>
             <br>
             – Strategic Support
             <br>
@@ -249,10 +250,9 @@
             <br><br>
 
             <h4>Our Scope Of Work Under Virtual CFO And Risk Advisory Services</h4>
-            <br>
             Some of the key functions of our Virtual CFO Services include:
             <br>
-            <ul>
+            <ul style="padding-left:20px;">
                 <li>Financial advisory</li>
                 <li>Improvement of governance standards and strategic decision-making processes</li>
                 <li>Developing a financial road map</li>
@@ -263,7 +263,7 @@
                 <li>Financial restructuring (including debt/loan restructuring)</li>
             </ul>
             Some of the key functions of our Risk Advisory Services include
-            <ul>
+            <ul style="padding-left: 20px;">
                 <li>Budgeting and forecasting</li>
                 <li>Improvement of governance standards and strategic decision-making processes</li>
                 <li>Developing a financial road map</li>
@@ -273,12 +273,10 @@
                 <li>Liaison with investors and collaborators</li>
                 <li>Financial restructuring (including debt/loan restructuring)</li>
             </ul>
-            <hr style="height:2px;color:gray;background-color:gray;text-align:left;width:80%;margin-left:0">
+            <hr style="height:2px;color:gray;background-color:gray;text-align:left;width:100%;margin-left:0">
             <br>
             <br>
             <h4>Reporting Partners</h4>
-            <br>
-            <br>
             <div class="row">
                 <div class="col-sm-4">
                 <img src="https://image.shutterstock.com/image-vector/businessman-icon-260nw-561625345.jpg">
@@ -292,8 +290,6 @@
                 <br>
                 Former Sr. Manager, EY India (Assurance)
                 <br>
-                <br>
-
                 <a href="mailto:nitish.mittal@coinmen.in">nitish.mittal@coinmen.in</a>
                 <br>
                 <a href="#f">Follow on Linkedin</a>
@@ -311,8 +307,6 @@
                 <br>
                 Former Sr. Manager, EY India (Assurance)
                 <br>
-                <br>
-
                 <a href="mailto:nitish.mittal@coinmen.in">nitish.mittal@coinmen.in</a>
                 <br>
                 <a href="#f">Follow on Linkedin</a>
