changed navbar, logo, padding

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div class="nav-container">
     <div class="brand">
       <a href="#!">
-      <img src="Finsurity.jpg" style="height:80px;margin-bottom: 2px"></a>
+      <img src="Finsurity.png" style="height:80px;margin-bottom: 2px"></a>
     </div>
     <nav>
       <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
@@ -172,6 +172,9 @@
 <br>
 
 <hr style="height:2px;border-width:0;color:maroon;background-color:#808080;width:85%">
+<div class="body-text">
+    <h4>Our Services</h4>
+</div>
 <div class="row body-text">
     <div class="col-sm-4 grid-spacing">
         <div class="grid-left body-text">
@@ -273,7 +276,7 @@
         <div class="main-text-subtext">
             Please feel free to reach us. Our goal will always remain to find the right solution for you.
         </div>
-        <button class="button butten1">Contact Us</button>
+        <button class="button">Contact Us</button>
     </div>
 </div>
 <br>
