--- a/IndianHospitality.html
+++ b/IndianHospitality.html
@@ -16,11 +16,16 @@
 <body>
 <!-- partial:index.partial.html -->
 <section class="navigation">
-    <div class="nav-container">
-        <div class="brand">
-            <a href="#!">
-                <img src="Finsurity.jpg" style="height:80px;margin-bottom: 2px"></a>
-        </div>
+    <div style="background: rgb(255,255,255);">
+        <img src="Finsurity.png" style="height:80px;margin-bottom: 2px; display: block;
+  margin-left: auto;
+  margin-right: auto;">
+    </div>
+    <div class="nav-container ">
+        <!--    <div class="brand">-->
+        <!--      <a href="#!">-->
+        <!--      <img src="Finsurity.png" style="height:80px;margin-bottom: 2px"></a>-->
+        <!--    </div>-->
         <nav>
             <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
             <ul class="nav-list">
@@ -152,8 +157,7 @@
         </nav>
     </div>
 </section>
-
-<div style="height: 80px"> </div>
+<div style="height: 160px"> </div>
 <div class="main-bg">
     <div class="img-overlay">
         <h1 class="main-text-heading">
