did some things

--- a/index.html
+++ b/index.html
@@ -160,23 +160,48 @@
 <div style="height: 160px"> </div>
 <div class="main-bg">
     <div class="img-overlay">
-        <h1 class="main-text-heading">
-        Assuring Financial Security
-        </h1>
-        <div class="main-text-subtext">
-            Finsurety is a holistic tax, financial, and business advisory firm with an aim to help companies explore opportunities in India which benefit their businesses
+        <div class="geeks">
+            <img src="bg.jpg" />
         </div>
+        <div class="centered">
+            Finsurety
+            <br>
+            signifies
+            <br>
+            Financial
+            <br>
+            Security and Serenity </div>
+        </div>
+
     </div>
 </div>
-<div class="body-text">
+<!--<div class="body-text">
     We are a consultancy firm comprising of financial advisors, tax consultants and chartered accountants, specializing in various aspects such as corporate tax planning, financial accounting, company incorporation, corporate finance, transfer pricing, debt syndication and audit practices.
 <br><br>
     Finsurety was founded in 2010 by two visionary men who currently serve as our Founding Partners. They come from different portfolios of tax and financial advisory but the two of them shared a common goal while starting this company, and was to establish a firm which puts the client’s interest first and helps the client’s business grow.
 
-</div>
-<br>
+</div>-->
+<!--<br>
 
-<hr style="height:2px;border-width:0;color:maroon;background-color:#808080;width:85%">
+<hr style="height:2px;border-width:0;color:maroon;background-color:#808080;width:85%">-->
+<div class="body-text">
+    <center><h3>Insights</h3></center> <br>
+    Stay updated with our insights and expert opinions on significant aspects that affect the financial strategies and planning of companies as well as key policies issued by the government authorities that can impact doing businesses in India
+    <div class="row body-text">
+        <div class="col-sm-4 grid-spacing">
+            <a href="www.google.com"><img src="abc.jpg" style="width:95%"></a>
+        </div>
+
+        <div class="col-sm-4 grid-spacing">
+            <a href="www.google.com"><img src="abc.jpg" style="width:95%"></a>
+        </div>
+        <div class="col-sm-4 grid-spacing">
+            <a href="www.google.com"><img src="abc.jpg" style="width:95%"></a>
+        </div>
+    </div>
+</div>
+
+
 <div class="body-text">
     <h4>Our Services</h4>
 </div>
@@ -286,12 +311,6 @@
 </div>
 <br>
 <br>
-
-<div class="body-text">
-    <p>Insights</p>
-    Stay updated with our insights and expert opinions on significant aspects that affect the financial strategies and planning of companies as well as key policies issued by the government authorities that can impact doing businesses in India
-</div>
-
 <br><br><br><br><br>
 
 <div class="footer-section">
