--- a/index.html
+++ b/index.html
@@ -157,12 +157,12 @@
     </nav>
   </div>
 </section>
-<div style="height: 160px"> </div>
+<div style="height: 140px"> </div>
 <div class="main-bg">
-    <div class="img-overlay">
-        <div class="geeks">
-            <img src="bg.jpg" />
-        </div>
+    <div class="geeks"></div>
+<!--        <div class="geeks">-->
+<!--            <img src="bg.jpg" />-->
+<!--        </div>-->
         <div class="centered">
             Finsurety
             <br>
@@ -172,8 +172,8 @@
             <br>
             Security and Serenity </div>
         </div>
-    </div>
-</div>
+<!--    </div>-->
+<!--</div>-->
 <!--<div class="body-text">
     We are a consultancy firm comprising of financial advisors, tax consultants and chartered accountants, specializing in various aspects such as corporate tax planning, financial accounting, company incorporation, corporate finance, transfer pricing, debt syndication and audit practices.
 <br><br>
@@ -187,15 +187,15 @@
     Stay updated with our insights and expert opinions on significant aspects that affect the financial strategies and planning of companies as well as key policies issued by the government authorities that can impact doing businesses in India
     <div class="row body-text">
         <div class="col-sm-4 grid-spacing ">
-            <div class="geeks">
+            <div class="geeks2">
             <a href="#f"><img src="abc.jpg" style="width:85%"></a>
             </div>
         </div><div class="col-sm-4 grid-spacing ">
-            <div class="geeks">
+            <div class="geeks2">
             <a href="#f"><img src="abc.jpg" style="width:85%"></a>
             </div>
         </div><div class="col-sm-4 grid-spacing ">
-            <div class="geeks">
+            <div class="geeks2">
             <a href="#f"><img src="abc.jpg" style="width:85%"></a>
             </div>
         </div>
